task-12-frontend-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend-app
  name: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - image: zivakhobov/frontend-app:v1
        name: frontend-app
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        livenessProbe:
             httpGet:
               path: /helth
               port: 80
             initialDelaySeconds: 30
             periodSeconds: 10
