task1-nginx1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    project: practise
  name: nginx2
spec:
  containers:
  - args:
    - author=zvakhobov
    image: nginx
    name: nginx2
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
